--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,5 +1,5 @@
-<%= form_for(@comment) do |f| %>
-  <%= f.label :comment text %>
+<%= form_for (@comment) do |f| %>
+  <%= f.label :comment_text %>
   <%= f.text_field :comment_text %>
   <br />
 
