--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,11 +1,11 @@
-<%= form_for(@user) do |f| %>
+<%= form_for (@user) do |f| %>
   <%= f.label :username %>
   <%= f.text_field :username %>
   <br />
-  <%= f.label :first name %>
+  <%= f.label :first_name %>
   <%= f.text_field :first_name %>
   <br />
-  <%= f.label :last name %>
+  <%= f.label :last_name %>
   <%= f.text_field :last_name %>
   <br />
   <%= f.label :email %>
