--- a/app/views/recruiters/show.html.erb
+++ b/app/views/recruiters/show.html.erb
@@ -9,3 +9,4 @@
 <%= link_to "New Job", new_job_path(@job) %>
 <%= link_to "Edit Recruiter Account", edit_recruiter_path(@recruiter) %>
 <%= link_to "Delete Recruiter Account", recruiter_path(@recruiter) %>
+<%= link_to "Home", root_path(@user) %>
