--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -8,3 +8,4 @@
 <br>
 <%= link_to "Edit Job", edit_job_path(@job) %>
 <%= link_to "Delete Job", job_path(@job) %>
+<%= link_to "Home", root_path(@user) %>
