--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -9,3 +9,6 @@
 <%= link_to "Edit User Account", edit_user_path(@user) %>
 <br>
 <%= link_to "Delete User Account", user_path(@user) %>
+<br>
+<%= link_to "Home", root_path(@user) %>
+
