--- a/app/views/jobs/_form.html.erb
+++ b/app/views/jobs/_form.html.erb
@@ -5,6 +5,9 @@
   <%= f.label :description %>
   <%= f.text_field :description %>
   <br />
+  <%= f.label :experience %>
+  <%= f.text_field :experience %>
+  <br />
 
   <%= f.submit %>
 <% end %>
