--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -6,6 +6,7 @@
 <% end %>
 </h1>
 <br>
+<%= button_to "Apply Here", new_application_path(@application) %>
 <%= link_to "Edit Job", edit_job_path(@job) %>
 <%= link_to "Delete Job", job_path(@job) %>
 <%= link_to "Home", root_path(@user) %>
