--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,11 +3,11 @@
 <%= @user.email %><br>
 </h1>
 <br>
-<%= button_to "Sign Out", user_path(@user) %>
+<%= link_to "Sign Out", user_path(@user) %>
 <br>
-<%= button_to "Edit User Account", edit_user_path(@user) %>
+<%= link_to "Edit User Account", edit_user_path(@user) %>
 <br>
-<%= button_to "Delete User Account", user_path(@user) %>
+<%= link_to "Delete User Account", user_path(@user) %>
 <br>
 <%= link_to "Home", root_path(@user) %>
 
