--- a/app/views/recruiters/show.html.erb
+++ b/app/views/recruiters/show.html.erb
@@ -3,7 +3,7 @@
 Recruiter:
 <br>
 <%= @recruiter.title %> - <%= @recruiter.description %><br>
-
+<%= @jobs%>
 </h1>
 <%= link_to "New Job", new_job_path(@job) %>
 <br>
