--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,8 +1,7 @@
 <%= flash[:message]%>
 <h1> All Users </h1>
 <% @users.each do |u| %>
-<%= u.username%>
-<%= u.email%>
+<%= link_to u.username + " - " + u.email, user_path(u) %>
 <br>
 <% end%>
 <br>
