--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,10 @@
     <%= csp_meta_tag %>
 
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-   
+    <div class="left-pic">
+    <img src="https://cdn.technologyadvice.com/wp-content/uploads/2019/11/The-Best-Recruitment-Software-for-Agencies1.png"
+      style= "width:50%;">
+  </div>
   </head>
 
   <body>
