--- a/app/views/comments/show.html.erb
+++ b/app/views/comments/show.html.erb
@@ -1,3 +1,4 @@
+<%= flash[:message]%>
 <h1>
 <label name="Comment"></label>
 <%= @comment.comment_text %><br>
@@ -5,4 +6,5 @@
 </h1>
 <br>
 <%= link_to "Delete Comment", comment_path(@comment) %>
+
 <%= link_to "Home", root_path(@user) %>
