--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,7 +7,7 @@
 <br>
 <%= link_to "Edit User Account", edit_user_path(@user) %>
 <br>
-<%= link_to "Delete User Account", delete_user_path(@user)%>
+<%= button_to "Delete User Account", user_path(@user), method: 'delete', remote: true %>
 <br>
 <%= link_to "Home", root_path(@user) %>
 
