--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -15,7 +15,7 @@ Job:
 <%= link_to "Edit Job", edit_job_path(@job) %>
 <br>
 <br>
-<%= link_to "Delete Job", job_path(@job) , :method => :delete %>
+<%= button_to "Delete Job", job_path(@job), method: 'delete', remote: true %>
 <br>
 <br>
 <%= link_to "Home", root_path(@user) %>
