--- a/app/views/comments/show.html.erb
+++ b/app/views/comments/show.html.erb
@@ -5,6 +5,6 @@
 
 </h1>
 <br>
-<%= link_to "Delete Comment", comment_path(@comment) %>
+<%= button_to "Delete Comment", comment_path(@comment), method: 'delete', remote: true %>
 
 <%= link_to "Home", root_path(@user) %>
