--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,9 @@
       style= "width:50%;">
   </div>
   </head>
-
+<% if flash[:message] %>
+<div class="field_with_errors"><%= flash[:message]%></div>
+<%end%>
   <body>
     <%= yield %>
   </body>
