--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,7 +3,7 @@
 <%= @user.email %><br>
 </h1>
 <br>
-<%= link_to "Sign Out", user_path(@user) %>
+<%= link_to "Sign Out", signout_path(@user) %>
 <br>
 <%= link_to "Edit User Account", edit_user_path(@user) %>
 <br>
