--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -14,8 +14,8 @@
   <%= f.label :password %>
   <%= f.password_field :password %>
   <br />
-  <%= f.label :admin %>
-  <%= check_box_tag(:admin, "admin") %>
+  <%= f.label :recruiter %>
+  <%= f.check_box :recruiter %>
   <br>
   <%= f.submit %>
 <% end %>
