--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,4 +1,7 @@
-<%= form_for (@comment) do |f| %>
+<%= if %>
+<%= flash[:message]%>
+<%=end%>
+<%= form_for [@job, @comment] do |f| %>
   <%= f.label :comment_text %>
   <%= f.text_field :comment_text %>
   <br>
