--- a/app/views/applications/show.html.erb
+++ b/app/views/applications/show.html.erb
@@ -9,3 +9,5 @@ Years Of Experience: <%= @application.experience%>
 Education: <%= @application.description %>
 <br>
 <%= link_to "Home", root_path(@user) %>
+<br>
+<%= link_to "Account", user_path(current_user)%>
