--- a/app/views/jobs/_form.html.erb
+++ b/app/views/jobs/_form.html.erb
@@ -11,6 +11,7 @@
 
   <%= f.submit %>
 <% end %>
-
+<br>
+<%= link_to "Account", user_path(current_user)%>
 <br>
 <%= link_to "Home", root_path(@user) %>
